# freegrad

./: .gitignore  README.md  pyproject.toml  requirements.txt
freegrad/: __init__.py
freegrad/data_prep/: __init__.py  batching.py  mnist.py
freegrad/data_prep/common/: __init__.py  normalize.py  splits.py
freegrad/datasets/: __init__.py  mnist.py
freegrad/datasets/common/: __init__.py  arrays.py  metadata.py
freegrad/execution/: __init__.py  base.py  single_cpu.py
freegrad/grad_scalers/: __init__.py  const.py
freegrad/grad_scalers/common/: base.py
freegrad/learning/: __init__.py  base.py  conditioning.py  factories.py  policies.py
freegrad/losses/: __init__.py  base.py  classification.py
freegrad/metrics/: __init__.py  aggregation.py  base.py  classification.py
freegrad/models/: __init__.py  mlp.py  small_cnn.py
freegrad/optimizers/: __init__.py  adam.py
freegrad/runtime/: __init__.py  condition.py  context.py  git.py  interfaces.py  paths.py  run.py  status.py  study.py  study_manifest.py
freegrad/training/: __init__.py  eval_step.py  loops.py  state.py  train_step.py
freegrad/utils/: imports.py  pytrees.py  rng.py  timing.py
scripts/: aggregate_results.py  make_plots.py  run_condition.py  run_study.py
suites/: __init__.py
suites/mnist/: __init__.py  adam_comparison_study.py
tests/: test_adam.py  test_batching.py  test_checkpoint_resume.py  test_condition_expansion.py  test_interfaces.py  test_learning_stack.py  test_mlp_forward.py  test_mnist_data.py  test_small_cnn_forward.py  test_smoke_mnist.py  test_train_step.py
(+20 files in other folders)
