[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freegrad"
version = "0.1.0"
description = "Experimental JAX training runtime for optimizer studies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["freegrad*", "specs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that require optional downloads or longer runtime",
]